plugins {
    id 'application'
    id 'java'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

sourceSets {
    main {
        java {
            srcDirs = ['src']
        }
        resources {
            srcDirs = ['resources']
        }
    }
    test {
        java {
            srcDirs = ['unittests']
        }
        resources {
            srcDirs = ['testresources']
        }
    }
}

dependencies {
    implementation "org.megamek:megamek"
    implementation 'com.thoughtworks.xstream:xstream:1.4.21'
    implementation 'org.apache.logging.log4j:log4j-api:2.25.4'
    implementation 'org.apache.logging.log4j:log4j-core:2.25.4'
    implementation 'jakarta.annotation:jakarta.annotation-api:3.0.0'
}
